--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: xteklabs
+title: xteklab
 email: developer@xteklabs.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-domain: xteklabs.com
+  Welcome to xteklab.
+domain: xteklab.github.io
 baseurl: "https://xteklab.github.io" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
+# twitter_username: jekyllrb
+# github_username: jekyll
 
 # Build settings
-theme: minima
+# theme: minimal
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
 # Exclude from processing.
 # The following items will not be processed, by default.
