--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ email: developer@xteklabs.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to xteklab.
 domain: xteklab.github.io
-baseurl: "https://xteklab.github.io" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://xteklab.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username: jekyll
 
 # Build settings
-# theme: minimal
-remote_theme: pages-themes/minimal@v0.2.0
+theme: minima
+# remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
